--- a/test04/Demo04_char_detect.dproj
+++ b/test04/Demo04_char_detect.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>Demo04_char_detect.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -89,7 +89,6 @@
         </DelphiCompile>
         <DCCReference Include="main04.pas">
             <Form>Form2</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\utils\calc_utils.pas"/>
         <BuildConfiguration Include="Release">
