fix: 1) Исправлена функция формирования матрицы с зависимыми и независимыми коэффициентами для теста №3 2) Большие и маленькие ускорения алгоритма MLPTrainLBFGS_MT_Mod

--- a/test03/Demo03_visual.dproj
+++ b/test03/Demo03_visual.dproj
@@ -103,6 +103,7 @@
             <Form>Form1</Form>
         </DCCReference>
         <DCCReference Include="..\utils\calc_utils.pas"/>
+        <DCCReference Include="..\alglib\delphi\src\mlptrain.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
