Небольшие корректировки в описании к настроечным параметрам.

--- a/test01/_demo_mlp_process_cls.dproj
+++ b/test01/_demo_mlp_process_cls.dproj
@@ -3,7 +3,7 @@
         <ProjectGuid>{E97F0C08-F039-41C5-B6CC-768C7F4B1B68}</ProjectGuid>
         <MainSource>_demo_mlp_process_cls.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Console</AppType>
         <FrameworkType>None</FrameworkType>
@@ -64,6 +64,7 @@
         <DCC_DebugInformation>0</DCC_DebugInformation>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
+        <DCC_Inlining>auto</DCC_Inlining>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <Manifest_File>None</Manifest_File>
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
